samples/_failures_safe/1761723595_dbdee9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44a7ca68.c: In function ‘main’:
./samples/SAFE/__tmp_44a7ca68.c:150:5: error: expected expression at end of input
  150 |     add_edge(&g, 3,
      |     ^~~~~~~~
./samples/SAFE/__tmp_44a7ca68.c:150:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_44a7ca68.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int u, int v, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_44a7ca68.c:150:5: error: expected declaration or statement at end of input
  150 |     add_edge(&g, 3,
      |     ^~~~~~~~
